# tradebot

./: .env.example  .gitignore  Key.txt  README.md  analyze_run.py  cmckey.txt  coinbasekey.txt  pyproject.toml  requirements.txt
analytics/: README.md  __init__.py  app.py  equity_curve.py  kalshi_activity_report.py  kalshi_kpis.py  kalshi_metrics_fixed.py  kpis.py  load_csvs.py  market_kpis.py  roundtrips.py  run_app.py  utils_time.py
data/: coinbase_trades_BTCUSD_20260113_2122.csv
docs/: TRADE_EXECUTION_CHEATSHEET.md
runs/: btc15m_live_20260112_214347.csv  btc15m_live_20260112_220022.csv  btc15m_live_20260112_220329.csv  btc15m_live_20260113_013237.csv  btc15m_live_20260113_033640.csv  btc15m_live_20260113_041418.csv  btc15m_live_20260113_193822.csv  btc15m_live_20260113_203816.csv  btc15m_live_20260113_204239.csv  btc15m_live_20260113_204303.csv  btc15m_live_20260113_214911.csv  btc15m_live_20260113_214936.csv  btc15m_live_20260113_221502.csv  btc15m_live_20260113_223726.csv  btc15m_live_20260113_223817.csv  btc15m_live_20260113_225909.csv  btc15m_live_20260114_021247.csv  btc15m_live_20260114_021352.csv  btc15m_live_20260114_025906.csv  btc15m_live_20260114_043011.csv  btc15m_live_20260114_064115.csv  btc15m_live_20260114_141349.csv  btc15m_live_20260114_154002.csv  btc15m_live_20260114_161511.csv  btc15m_live_20260114_164819.csv  btc15m_live_20260114_210141.csv  btc15m_live_20260114_210214.csv  btc15m_live_20260115_020028.csv  btc15m_live_20260115_061500.csv  btc15m_live_20260115_145325.csv  btc15m_live_20260115_163749.csv  btc15m_live_20260115_182814.csv  (+53 more)
(+238 files in other folders)
