[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradebot"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
	"httpx>=0.27.0",
	"cryptography>=42.0.0",
	"pydantic>=2.6.0",
	"pydantic-settings>=2.2.0",
	"python-dotenv>=1.0.1",
	"tenacity>=8.2.3",
	"websockets>=12.0",
	
	# ML training (btc15m_direction_model)
	"numpy>=2.0",
	"pandas>=2.0",
	"scikit-learn>=1.5",
	"xgboost>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
